--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main>
-            <!-- Header -->
-            <header class="header">
+        <main id="home">
+            <header class="fixed-header">
                 <div class="content">
                     <!-- Nav -->
                     <nav class="navbar">
@@ -25,11 +24,11 @@
                         <img src="./assets/css/img/logo.svg" alt="Besnik." />
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#service">Features</a></li>
+                            <li><a href="#feature">Services</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                         <!-- Action -->
                         <div class="action">
@@ -37,6 +36,11 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
+                </div>
+            </header>
+            <!-- Hero -->
+            <div class="hero-wrap">
+                <div class="content">
                     <!-- Hero Info -->
                     <div class="hero">
                         <div class="info">
@@ -60,7 +64,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
             <!-- Clien -->
             <div class="clien">
                 <div class="content">
@@ -87,7 +91,7 @@
                 </div>
             </div>
             <!-- Guides -->
-            <div class="guides">
+            <div id="service" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -139,7 +143,7 @@
                 </div>
             </div>
             <!-- Feature -->
-            <div class="feature">
+            <div id="feature" class="feature">
                 <div class="content">
                     <h2 class="sub-title">Featured Properties</h2>
                     <div class="row">
@@ -277,7 +281,7 @@
                 </div>
             </div>
             <!-- Stats -->
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -443,7 +447,7 @@
                 </div>
             </div>
             <!-- Subcription -->
-            <div class="subcription">
+            <div id="contact" class="subcription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
